Fixed the lightning

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		   Press to make some lightning or just wait!
+		   Press to make some lightning!
 	    </footer>
 	</body>
 </html>
